syntax = "proto3";

package order;

service OrderService {
  rpc CreateOrder(OrderRequest) returns (OrderResponse) {}
  rpc GetOrders(Empty) returns (OrderList) {}
}

message Order {
  string id = 1;
  string userId = 2;
  repeated ProductQuantity products = 3;
}

message ProductQuantity {
  string productId = 1;
  int32 quantity = 2;
}

message OrderRequest {
  string userId = 1;
  repeated ProductQuantity products = 2;
}

message OrderResponse {
  Order order = 1;
}

message OrderList {
  repeated Order orders = 1;
}

message Empty {}
